[gd_scene load_steps=7 format=3 uid="uid://bdoxy2qiuknte"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_dk2v2"]
[ext_resource type="AudioStream" uid="uid://c10n1sofg5akd" path="res://assets/sounds/enemy_dead.wav" id="2_osbkp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8j8ew"]
size = Vector3(1, 1.99634, 1)

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_v4quk"]

[sub_resource type="PrismMesh" id="PrismMesh_8x6eg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fmarf"]

[node name="Enemy" type="AnimatableBody3D"]
collision_layer = 36
collision_mask = 36
input_ray_pickable = false
axis_lock_linear_z = true
script = ExtResource("1_dk2v2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.249084, 0)
shape = SubResource("BoxShape3D_8j8ew")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
cast_shadow = 3
mesh = SubResource("TubeTrailMesh_v4quk")

[node name="HatMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.5, 0)
cast_shadow = 3
mesh = SubResource("PrismMesh_8x6eg")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0207568, 0)
collision_layer = 36
collision_mask = 36

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
shape = SubResource("BoxShape3D_fmarf")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_osbkp")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
